fix: #2314: Fix app container misaligned issue (#2317)

--- a/packages/marketplace/src/styles/pages/apps.scss
+++ b/packages/marketplace/src/styles/pages/apps.scss
@@ -1,4 +1,5 @@
 .app-list {
+  width: auto;
   height: 100vh;
   overflow: auto;
   /* Hide scrollbar. only show window scrollbar */
